--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,7 @@
                     find any bug or issue in calculation of numbers please do not hesitate to inform us.
 					</p>
 				<br></b>
-                <img src="777.png" width="100%" style="height:auto;">
+                <img src="777.jpg" width="100%" style="height:auto;">
             </div>
             <!-- /body right part -->
 
